making shit more consistent and implement a (wacky) dot product

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "dtl" # Dimensioned Tensor Library
+name = "dlt" # Dimensioned Tensor Library
 version = "0.1.0"
 edition = "2021"
 
 [lib]
-name = "dtl"# Dimensioned Tensor Library
+name = "dlt"# Dimensioned Tensor Library
 path = "src/lib.rs"
