--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "dlt" # Dimensioned Tensor Library
+name = "slut" # Static Linear Unitful Tensors
 version = "0.1.1"
-edition = "2021"
+edition = "2024"
 license = "MIT"
-description = "Library for Vectors and Matrices with Physical Dimensions. Basically `uom` but in a vector space."
+description = "Static Linear Untiful Tensors. Library for Vectors and Matrices with Physical Dimensions. Basically `uom` but in a vector space."
 
 [lib]
 name = "dlt"# Dimensioned Tensor Library
