--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "slut" # Static Linear Unitful Tensors
-version = "0.1.2"
+version = "0.1.3"
 edition = "2024"
 license = "MIT"
 description = "Static Linear Untiful Tensors. Library for Vectors and Matrices with Physical Dimensions. Basically `uom` but in a vector space."
 
 [lib]
-name = "dlt"# Dimensioned Tensor Library
+name = "slut" # Static Linear Unitful Tensors
 path = "src/lib.rs"
 
 [dependencies]
