--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ path = "src/lib.rs"
 
 [dependencies]
 rand = "0.9.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
+lazy_static = "1.4"
